# tauri-opencv-build

./: .gitignore  build-macos-intel.sh  macos-intel-logs.txt  package.json  windows-logs.txt
.cargo/: config.toml
.github/workflows/: build.yml  macos-arm-log-build.txt  release-macos-arm.yml  release-macos-intel.yml  release-macos-universal.yml  release-ubuntu.yml  release-windows.yml  release.yml  ubuntu.yml  windows-log-build.txt
src/: index.html  main.ts  styles.scss
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotate_file.rs  main.rs
src/app/: app.component.spec.ts  app.component.ts
src/app/core/services/swish-ai/: swish-ai.service.ts
src/app/core/services/tauri/: tauri.service.ts
src/app/shared/components/: index.ts
src/app/shared/components/footer/: footer.component.html  footer.component.spec.ts
src/app/shared/components/guide/: guide.component.html  guide.component.ts
src/app/shared/components/header/: header.component.html
src/app/shared/models/: swish-ai.models.ts
src/app/swish-ai/: swish-ai.component.html  swish-ai.component.scss  swish-ai.component.ts
