[package]
name = "swishai"
version = "0.1.0"
description = "SwishAI Application"
authors = ["you"]
license = ""
repository = ""
default-run = "swishai"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-http = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
opencv = { version = "0.95", default-features = false, features = ["imgproc", "videoio", "highgui"] }
ndarray = "0.16"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
anyhow = "1.0"
chrono = "0.4"
lazy_static = "1.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
opt-level = 2  # Enable optimizations in debug mode for better performance

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
